# Physiotherapy-Clinic-Web-Application

./: .replit  README.md  app.py  data.db  pyproject.toml  requirements.txt
myenv/: pyvenv.cfg
static/css/: about.css  add_treatment.css  admin.css  edit_profile.css  footer.css  header.css  home.css  login.css  patient_history.css  physiotherapist.css  physiotherapist_patients.css  profile.css  receptionist.css  reviews.css  search_result.css  services.css  team.css  view.css
templates/: about.html  add_treatment.html  admin.html  foot.html  footer.html  forgot_password.html  header.html  index.html  login.html  patient_history.html  physiotherapist.html  physiotherapist_patients.html  profile.html  receptionist.html  reset_password.html  reviews.html  search_results.html  services.html  team.html  update_details.html  verify_otp.html  view_physios.html  view_recepts.html
